--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>vladislav loh</title>
 </head>
 <body>
-	
+    <p>eshe kakoi loh</p>
 </body>
 </html>
