--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>vladislav loh</title>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<footer>
+		<div class="footer_container">
+			<div class="footer_logo">
+				<h2>Lucky<span>BOT</span></h2>
+				<p>Все права защищенны 2018</p>
+				<div class="footer_icons">
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
