--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 
 	<title>vladislav</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,6 +24,18 @@
 			</div>
 		</div>
 	</header>
+	<section class="running_line">
+		<div class="running_line_container">
+			<div class="ticker">
+				<ul id="webTicker">
+					<li>100% БЕЗОПАСНО</li>
+					<li>100% БЕЗОПАСНО</li>
+					<li>100% АНОНИМНО</li>
+					<li>4-6% ПОГРЕШНОСТИ</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 	<footer>
 		<div class="footer_container">
 			<div class="footer_logo">
@@ -34,7 +47,19 @@
 					<i class="fa fa-facebook" aria-hidden="true"></i>
 				</div>
 			</div>
+			<div class="footer_text footer_text1">
+				Все обрабатываемые данные и личная информация является приватной и конфиденциальной и не подлежит передаче, продаже и распространению третьим лицам ни при каких условиях. Мы применяем метод итерационного шифрования при котором ежедневно меняются алгоритмы и ключи шифрования.
+			</div>
+			<div class="footer_text footer_text2">
+				Сервис <project name> считает своим долгом предупредить пользователей, что предоставляемые им рекомендации следует рассматривать как информацию к размышлению, а не прямой призыв к действию. Также мы напоминаем, что азартная игра - это вид развлечения, а не средство получения дохода.
+			</div>
+			<div class="footer_text footer_text3">
+				Сервис <project name> не является организатором игры. Сайт носит исключительно информационно-развлекательный.
+			</div>
 		</div>
 	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/jquery.webticker.min.js" charset="utf-8"></script>
+	<script src="js/common.js" charset="utf-8"></script>
 </body>
 </html>
