--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>vladislav loh</title>
+	<title>vladislav</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<header>
+		<div class="container_head">
+			
+		</div>
+	</header>
 </body>
 </html>
