--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<meta charset="UTF-8">
 
 	<title>vladislav</title>
-<<<<<<< HEAD
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-=======
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
->>>>>>> 0ab58ee095281f5c4e38de34610e5e4b919486ad
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -30,6 +29,21 @@
 			<h1>LUCKYBOT</h1>
 		</div>
 	</header>
+	<section class="revies">
+		<div class="revies_container">
+			<div class="slider">
+				<div class="slider_content">
+					<img src="img/facebook_coments.png" alt="">
+				</div>
+				<div class="slider_content">
+					<img src="img/facebook_coments.png" alt="">
+				</div>
+				<div class="slider_content">
+					<img src="img/facebook_coments.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="running_line">
 		<div class="running_line_container">
 			<div class="ticker">
@@ -48,24 +62,25 @@
 				<h2>Lucky<span>BOT</span></h2>
 				<p>Все права защищенны 2018</p>
 				<div class="footer_icons">
-					<i class="fa fa-facebook" aria-hidden="true"></i>
-					<i class="fa fa-facebook" aria-hidden="true"></i>
-					<i class="fa fa-facebook" aria-hidden="true"></i>
+					<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="footer_text footer_text1">
 				Все обрабатываемые данные и личная информация является приватной и конфиденциальной и не подлежит передаче, продаже и распространению третьим лицам ни при каких условиях. Мы применяем метод итерационного шифрования при котором ежедневно меняются алгоритмы и ключи шифрования.
 			</div>
 			<div class="footer_text footer_text2">
-				Сервис <project name> считает своим долгом предупредить пользователей, что предоставляемые им рекомендации следует рассматривать как информацию к размышлению, а не прямой призыв к действию. Также мы напоминаем, что азартная игра - это вид развлечения, а не средство получения дохода.
+				Сервис %project name% считает своим долгом предупредить пользователей, что предоставляемые им рекомендации следует рассматривать как информацию к размышлению, а не прямой призыв к действию. Также мы напоминаем, что азартная игра - это вид развлечения, а не средство получения дохода.
 			</div>
 			<div class="footer_text footer_text3">
-				Сервис <project name> не является организатором игры. Сайт носит исключительно информационно-развлекательный.
+				Сервис %project name% не является организатором игры. Сайт носит исключительно информационно-развлекательный.
 			</div>
 		</div>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/jquery.webticker.min.js" charset="utf-8"></script>
+	<script src="js/slick.min.js" charset="utf-8"></script>
 	<script src="js/common.js" charset="utf-8"></script>
 </body>
 </html>
