--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
 	<header>
 		<div class="container_head">
-			
+			<div class="top_line">
+				<a href="#" class="logo">Lucky<span>BOT</span></a>
+				<nav>
+					<ul>
+						<li><a href="#">Главная</a> /</li>
+						<li><a href="#">FAQ</a> /</li>
+						<li><a href="#">Опрос</a></li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 	</header>
 	<footer>
