--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 
 	<title>vladislav</title>
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -14,13 +15,15 @@
 			<div class="top_line">
 				<a href="#" class="logo">Lucky<span>BOT</span></a>
 				<nav>
-					<ul>
+					<ul class="clearfix">
 						<li><a href="#">Главная</a> /</li>
 						<li><a href="#">FAQ</a> /</li>
 						<li><a href="#">Опрос</a></li>
 					</ul>
 				</nav>
 			</div>
+			<h3>Взломай удачу с помощью нашей нейросети</h3>
+			<h1>LUCKYBOT</h1>
 		</div>
 	</header>
 	<footer>
