--- a/index.html
+++ b/index.html
@@ -31,14 +31,24 @@
 	</header>
 	<section class="revies">
 		<div class="revies_container">
+			<div class="revies_text">
+				<div class="revies_text_title">
+					<h2>Отзывы</h2>
+					<div class="red_line"></div>
+				</div>
+				<p>Успех других - <br> лучшее доказательство</p>
+			</div>
 			<div class="slider">
 				<div class="slider_content">
+					<div class="slider_content_absolute"></div>
 					<img src="img/facebook_coments.png" alt="">
 				</div>
 				<div class="slider_content">
+					<div class="slider_content_absolute"></div>
 					<img src="img/facebook_coments.png" alt="">
 				</div>
 				<div class="slider_content">
+					<div class="slider_content_absolute"></div>
 					<img src="img/facebook_coments.png" alt="">
 				</div>
 			</div>
