--- a/index.html
+++ b/index.html
@@ -29,6 +29,36 @@
 			<h1>LUCKYBOT</h1>
 		</div>
 	</header>
+	<section class="feedback">
+		<div class="feedback_container">
+			<h2>Узнай, где сейчас повезет<br> именно тебе</h2>
+			<div class="red_line"></div>
+			<p>Результат прямо зависит от того, насколько <br>корректными будут введенные данные</p>
+			<form class="feedback_form">
+				<div class="form_wrapper">
+					<label> 1. Ваше ФИО</label>
+					<input type="text" name="" value="">
+				</div>
+				<div class="form_wrapper">
+					<label> 2. Ваш пол</label>
+					<div class="choose_sex">
+						<div class="sex active">М</div>
+						<div class="sex">Ж</div>
+						<div class="sex">Ср</div>
+					</div>
+				</div>
+				<div class="form_wrapper">
+					<label> 3. Ваше тотемное животное</label>
+					<input type="text" name="" value="">
+				</div>
+				<div class="form_wrapper">
+					<label> 4. Какая была погода когда вы родились?</label>
+					<input type="text" name="" value="">
+				</div>
+				<input type="submit" name="" value="Отправить">
+			</form>
+		</div>
+	</section>
 	<section class="revies">
 		<div class="revies_container">
 			<div class="revies_text">
