--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>vladislav</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -22,10 +23,56 @@
 					</ul>
 				</nav>
 			</div>
-			<h3>Взломай удачу с помощью нашей нейросети</h3>
+			<h3> <span>Взломай удачу</span> с помощью нашей нейросети</h3>
 			<h1>LUCKYBOT</h1>
 		</div>
 	</header>
+	<section id="black_sec">
+		<div class="container_black">
+			<div class="offer_black">
+			<div class="black_img">
+				<img src="img/laptop.png">
+			</div>
+			<div class="black_info">
+			<p>Первый сервис, основанный на аналитической вычислительной системе по индивидуальным данным</p>
+			<p> <span>Проверь везение</span> с помощью уникального сервиса и узнай, где твоя удача именно сейчас
+</p>
+			</div>
+			</div>
+
+		<div class="big__black_abs">
+			<div class="black_list">
+				<div class="econom_cash">
+					<div class="money_img">
+						<img src="img/money.png">
+					</div>
+					<p>Экономь деньги</p>
+				</div>
+				<div class="casino">
+					<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
+				</div>
+				<div class="image_prev">
+					<div class="fonts_image"><img src="img/clock.png" alt=""></div>
+					<div class="fonts_image"><img src="img/man.png" alt=""></div>
+					<div class="fonts_image"><img src="img/free.png" alt=""></div>
+				</div>
+			</div>
+		</div>
+
+		</div>
+	</section>
+	<section id="rememb">
+		<div class="rememb_container">
+			<div class="rem_block">
+				<h2>Помни</h2>
+				<p>Чем быстрее ты воспользуешься персональным прогнозом, тем выше шансы на победу. Программный алгоритм, который мы разрабатывали полтора года, обновляется каждые двенадцать минут. Кто успеет, тот и сорвет куш.</p>
+			</div>
+		</div>
+	</section>
+	<section id="quest">
+		
+	</section>
+	
 	<footer>
 		<div class="footer_container">
 			<div class="footer_logo">
