--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
+	<!-- <header>
 		<div class="container_head">
 			<div class="top_line">
 				<a href="#" class="logo">Lucky<span>BOT</span></a>
@@ -74,7 +74,7 @@
 	</section>
 	<section id="quest">
 
-	</section>
+	</section> -->
 
 	<section class="feedback">
 		<div class="feedback_container">
