--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<h1>LUCKYBOT</h1>
 		</div>
 	</header>
-<<<<<<< HEAD
+
 	<section id="black_sec">
 		<div class="container_black">
 			<div class="offer_black">
@@ -74,10 +74,43 @@
 		</div>
 	</section>
 	<section id="quest">
-		
+		<div class="quest_container">
+			<div class="quest_offer">
+				<div class="quest_info">
+					<h2>ЧаВо</h2>
+					<ul>
+						<li>1. А почему вы сами не играете и раздаете советы?
+</li>
+						<li class="inf_secq">2. Почему алгоритм обновляется так часто? Я могу          	поставить завтра, через неделю, после зарплаты?
+
+</li>
+<p>Мы провели десятки тысяч тестов (!), прежде чем выпустили свою уникальную программу. И мы не изобрели волшебной “кнопки”, которая дает бабло всегда. Но мы знаем время, когда шансы урвать свое - максимальные! И лучше поспешить, т.к. следующий рост твоего ЛакиМетра может быть только через год.</p>
+						<li>3. Получается с вашим сайтом я выигрываю только один раз?
+</li>
+					</ul>
+				</div>
+				<div class="quest_right">
+					<div class="q_rig_img">
+						<img src="img/v1.png">
+					</div>
+					<div class="times">
+						<h4>До обновления системы</h4>
+						<div class="timer">
+						  <span id="days"></span>
+						  <!-- <span id="delimiter">:</span> -->
+						  <span id="hours"></span>
+						  <span id="delimiter">:</span>
+						  <span id="minutes"></span>
+						  <span id="delimiter">:</span>
+						  <span id="seconds"></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	
-=======
+
 	<section class="feedback">
 		<div class="feedback_container">
 			<h2>Узнай, где сейчас повезет<br> именно тебе</h2>
@@ -145,7 +178,7 @@
 			</div>
 		</div>
 	</section>
->>>>>>> 215b1fd7f428ca31efb43d9a297fa88cd28149b7
+
 	<footer>
 		<div class="footer_container">
 			<div class="footer_logo">
