--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<title>vladislav</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -19,6 +18,9 @@
 			<div class="top_line">
 				<a href="#" class="logo">Lucky<span>BOT</span></a>
 				<nav>
+					<div class="mob_menu_ic">
+						<i class="fa fa-bars" aria-hidden="true"></i>
+					</div>
 					<ul class="clearfix">
 						<li><a href="#">Главная</a> /</li>
 						<li><a href="#">FAQ</a> /</li>
@@ -32,10 +34,12 @@
 	</header>
 
 	<section id="black_sec">
+		<!-- <img src="img/laptop_mob_bg.png"> -->
 		<div class="container_black">
 			<div class="offer_black">
 			<div class="black_img">
-				<img src="img/laptop.png">
+				<img src="img/laptop.png" class="desc_img">
+				<img src="img/laptop_mob_bg.png" class="mobil_img">
 			</div>
 			<div class="black_info">
 			<p>Первый сервис, основанный на аналитической вычислительной системе по индивидуальным данным</p>
@@ -44,8 +48,12 @@
 			</div>
 			</div>
 
+		
+
+		</div>
 		<div class="big__black_abs">
 			<div class="black_list">
+				<div class="dfgdf" style="display: flex;">
 				<div class="econom_cash">
 					<div class="money_img">
 						<img src="img/money.png">
@@ -55,14 +63,13 @@
 				<div class="casino">
 					<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
 				</div>
+				</div>
 				<div class="image_prev">
 					<div class="fonts_image"><img src="img/clock.png" alt=""></div>
 					<div class="fonts_image"><img src="img/man.png" alt=""></div>
 					<div class="fonts_image"><img src="img/free.png" alt=""></div>
 				</div>
 			</div>
-		</div>
-
 		</div>
 	</section>
 	<section id="rememb">
