added changed fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>vladislav</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
@@ -78,8 +78,11 @@
 
 	<section class="feedback">
 		<div class="feedback_container">
-			<h2>Узнай, где сейчас повезет<br> именно тебе</h2>
-			<div class="red_line"></div>
+			<div class="wrapper_feedback">
+				<h2>Узнай, где сейчас повезет<br> именно тебе</h2>
+				<span>03</span>
+				<div class="red_line"></div>
+			</div>
 			<p>Результат прямо зависит от того, насколько <br>корректными будут введенные данные</p>
 			<form class="feedback_form">
 				<div class="form_wrapper">
@@ -110,6 +113,7 @@
 		<div class="revies_container">
 			<div class="revies_text">
 				<div class="revies_text_title">
+					<span>04</span>
 					<h2>Отзывы</h2>
 					<div class="red_line"></div>
 				</div>
