--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 						<i class="fa fa-bars" aria-hidden="true"></i>
 					</div>
 					<ul class="clearfix">
-						<li><a href="#">Главная</a> /</li>
-						<li><a href="#">FAQ</a> /</li>
-						<li><a href="#">Опрос</a></li>
+						<li><a href="#black_sec">Главная</a> <span>/</span></li>
+						<li><a href="#quest">FAQ</a><span> /</span></li>
+						<li><a href="#opros">Опрос</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -122,7 +122,7 @@
 
 	</section> 
 
-	<section class="feedback">
+	<section class="feedback" id="opros">
 		<div class="feedback_container">
 			<div class="wrapper_feedback">
 				<h2>Узнай, где сейчас повезет<br> именно тебе</h2>
