--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>vladislav</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -48,7 +47,7 @@
 			</div>
 			</div>
 
-		
+
 
 		</div>
 		<div class="big__black_abs">
@@ -86,15 +85,19 @@
 			<div class="quest_offer">
 				<div class="quest_info">
 					<h2>ЧаВо</h2>
-					<ul>
-						<li>1. А почему вы сами не играете и раздаете советы?
-</li>
-						<li class="inf_secq">2. Почему алгоритм обновляется так часто? Я могу          	поставить завтра, через неделю, после зарплаты?
-
-</li>
-<p>Мы провели десятки тысяч тестов (!), прежде чем выпустили свою уникальную программу. И мы не изобрели волшебной “кнопки”, которая дает бабло всегда. Но мы знаем время, когда шансы урвать свое - максимальные! И лучше поспешить, т.к. следующий рост твоего ЛакиМетра может быть только через год.</p>
-						<li>3. Получается с вашим сайтом я выигрываю только один раз?
-</li>
+					<ul class=".quest_listitem">
+						<li class="quest_item ">
+							<div class="quest_item--visible">1. А почему вы сами не играете и раздаете советы?</div>
+							<p class="quest_item--hidden">Мы провели десятки тысяч тестов (!), прежде чем выпустили свою уникальную программу. И мы не изобрели волшебной “кнопки”, которая дает бабло всегда. Но мы знаем время, когда шансы урвать свое - максимальные! И лучше поспешить, т.к. следующий рост твоего ЛакиМетра может быть только через год.</p>
+						</li>
+						<li class="quest_item quest_item--active">
+							<div class="quest_item--visible inf_secq">2. Почему алгоритм обновляется так часто? Я могу          	поставить завтра, через неделю, после зарплаты?</div>
+							<p class="quest_item--hidden activeomg">Мы провели десятки тысяч тестов (!), прежде чем выпустили свою уникальную программу. И мы не изобрели волшебной “кнопки”, которая дает бабло всегда. Но мы знаем время, когда шансы урвать свое - максимальные! И лучше поспешить, т.к. следующий рост твоего ЛакиМетра может быть только через год.</p>
+						</li>
+						<li class="quest_item">
+							<div class="quest_item--visible">3. Получается с вашим сайтом я выигрываю только один раз?</div>
+							<p class="quest_item--hidden">Мы провели десятки тысяч тестов (!), прежде чем выпустили свою уникальную программу. И мы не изобрели волшебной “кнопки”, которая дает бабло всегда. Но мы знаем время, когда шансы урвать свое - максимальные! И лучше поспешить, т.к. следующий рост твоего ЛакиМетра может быть только через год.</p>
+						</li>
 					</ul>
 				</div>
 				<div class="quest_right">
@@ -117,10 +120,10 @@
 			</div>
 		</div>
 	</section>
-	
 
 
-	</section> 
+
+	</section>
 
 	<section class="feedback">
 		<div class="feedback_container">
