--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</div>
 				<div class="quest_right">
 					<div class="q_rig_img">
-						<img src="img/v1.png">
+						<img src="img/v1.png" class="fluffy">
 					</div>
 					<div class="times">
 						<h4>До обновления системы</h4>
@@ -222,6 +222,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/jquery.webticker.min.js" charset="utf-8"></script>
 	<script src="js/slick.min.js" charset="utf-8"></script>
+	<script type="text/javascript" src="js/jquery.parallax-0.2.js"></script>
 	<script src="js/common.js" charset="utf-8"></script>
 </body>
 </html>
