changes to slider

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 					<div class="money_img">
 						<img src="img/money.png">
 					</div>
-					<p>Экономь деньги</p>
-				</div>
-				<div class="casino">
-					<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
+					<div class="econom_cash_wrapper">
+						<p>Экономь деньги</p>
+						<div class="casino">
+							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
+						</div>
+					</div>
 				</div>
 				</div>
 				<div class="image_prev">
@@ -152,6 +154,18 @@
 				</div>
 				<div class="form_wrapper">
 					<label> 4. Какая была погода когда вы родились?</label>
+					<input type="text" name="" value="">
+				</div>
+				<div class="form_wrapper">
+					<label> 5. Какая была погода когда вы родились?</label>
+					<input type="text" name="" value="">
+				</div>
+				<div class="form_wrapper">
+					<label> 6. Какая была погода когда вы родились?</label>
+					<input type="text" name="" value="">
+				</div>
+				<div class="form_wrapper">
+					<label> 7. Какая была погода когда вы родились?</label>
 					<input type="text" name="" value="">
 				</div>
 				<input type="submit" name="" value="Отправить">
