--- a/index.html
+++ b/index.html
@@ -67,8 +67,20 @@
 				</div>
 				<div class="image_prev">
 					<div class="fonts_image"><img src="img/clock.png" alt=""></div>
+					<!-- <div class="econom_cash_wrapper">
+						<p>Экономь деньги</p>
+						<div class="casino">
+							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
+						</div>
+					</div> -->
 					<div class="fonts_image"><img src="img/man.png" alt=""></div>
 					<div class="fonts_image"><img src="img/free.png" alt=""></div>
+					<!-- <div class="econom_cash_wrapper">
+						<p>Экономь деньги</p>
+						<div class="casino">
+							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
+						</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
