--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 		<div class="big__black_abs">
 			<div class="black_list">
 				<div class="dfgdf" style="display: flex;">
-				<div class="econom_cash">
+				
+				</div>
+				<div class="image_prev">
+					<div class="econom_cash">
 					<div class="money_img">
 						<img src="img/money.png" class="mnt">
 					</div>
@@ -64,12 +67,10 @@
 						</div>
 					</div>
 				</div>
-				</div>
-				<div class="image_prev">
 					<div class="econ_clock">
 					<div class="fonts_image clock_img"><img src="img/clock.png" alt=""></div>
 					<div class="econom_clock_wrapper">
-						<p class="hd_lists">Экономь деньги</p>
+						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
 						</div>
@@ -78,7 +79,7 @@
 					<div class="econ_pers">
 					<div class="fonts_image pers_img"><img src="img/man.png" alt=""></div>
 					<div class="econom_pers_wrapper">
-						<p class="hd_lists">Экономь деньги</p>
+						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
 						</div>
@@ -87,7 +88,7 @@
 					<div class="econ_coin">
 					<div class="fonts_image coin_img"><img src="img/free.png" alt=""></div>
 					<div class="econom_coin_wrapper">
-						<p class="hd_lists">Экономь деньги</p>
+						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
 						</div>
