--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -60,7 +61,7 @@
 					<div class="money_img">
 						<img src="img/money.png" class="mnt">
 					</div>
-					<div class="econom_cash_wrapper">
+					<div class="econom_cash_wrapper animated bounceInRight">
 						<p class="hd_lists">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
@@ -69,7 +70,7 @@
 				</div>
 					<div class="econ_clock">
 					<div class="fonts_image clock_img"><img src="img/clock.png" alt=""></div>
-					<div class="econom_clock_wrapper">
+					<div class="econom_clock_wrapper animated bounceInRight">
 						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
@@ -78,7 +79,7 @@
 					</div>
 					<div class="econ_pers">
 					<div class="fonts_image pers_img"><img src="img/man.png" alt=""></div>
-					<div class="econom_pers_wrapper">
+					<div class="econom_pers_wrapper animated bounceInRight">
 						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
@@ -87,7 +88,7 @@
 					</div>
 					<div class="econ_coin">
 					<div class="fonts_image coin_img"><img src="img/free.png" alt=""></div>
-					<div class="econom_coin_wrapper">
+					<div class="econom_coin_wrapper animated bounceInRight">
 						<p class="hd_lists hd_seclis">Экономь деньги</p>
 						<div class="casino">
 							<p>Зачем играть в казино, которые не платят или просто тебе не подходят? Иди сразу в проверенное место, делай ставку и забирай своё!</p>
