--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
 						  <span id="days"></span>
 						  <!-- <span id="delimiter">:</span> -->
 						  <span id="hours"></span>
-						  <span id="delimiter">:</span>
+						  <!-- <span id="delimiter">:</span> -->
 						  <span id="minutes"></span>
 						  <span id="delimiter">:</span>
 						  <span id="seconds"></span>
+						  <span id="delimiter">:</span>
+						  <span id="millis"></span>
 						</div>
 					</div>
 				</div>
