added modal window

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div id="overlay"></div>
+	<div class="modal_feedback">
+		<div class="modal_feedback_item">
+			<img src="img/facebook_coments2.png" alt="">
+			<a href="" target="_blank">34%</a>
+		</div>
+		<div class="modal_feedback_item">
+			<img src="img/facebook_coments2.png" alt="">
+			<a href="" target="_blank">34%</a>
+		</div>
+		<div class="modal_feedback_item">
+			<img src="img/facebook_coments2.png" alt="">
+			<a href="" target="_blank">34%</a>
+		</div>
+	</div>
 	<header>
 		<div class="container_head">
 			<div class="top_line">
@@ -54,7 +69,7 @@
 		<div class="big__black_abs">
 			<div class="black_list">
 				<div class="dfgdf" style="display: flex;">
-				
+
 				</div>
 				<div class="image_prev">
 					<div class="econom_cash">
@@ -166,7 +181,7 @@
 			<form class="feedback_form">
 				<div class="form_wrapper">
 					<label> 1. Ваше ФИО</label>
-					<input type="text" name="" value="">
+					<input type="text" name="" value="" >
 				</div>
 				<div class="form_wrapper">
 					<label> 2. Ваш пол</label>
@@ -178,7 +193,7 @@
 				</div>
 				<div class="form_wrapper">
 					<label> 3. Ваше тотемное животное</label>
-					<input type="text" name="" value="">
+					<input type="text" name="" value="" >
 				</div>
 				<div class="form_wrapper">
 					<label> 4. Какая была погода когда вы родились?</label>
@@ -196,7 +211,7 @@
 					<label> 7. Какая была погода когда вы родились?</label>
 					<input type="text" name="" value="">
 				</div>
-				<input type="submit" name="" value="Отправить">
+				<input type="button" name="" value="Отправить" id="modal_form_submit">
 			</form>
 		</div>
 	</section>
